--- a/requirements.txt
+++ b/requirements.txt
@@ -1,87 +1,9 @@
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.11
-aiosignal==1.3.2
-annotated-types==0.7.0
-anyio==4.8.0
-async-timeout==5.0.1
-attrs==24.3.0
-certifi==2024.12.14
-cffi==1.17.1
-charset-normalizer==3.4.1
-datasets==3.2.0
-dill==0.3.8
-distro==1.9.0
-exceptiongroup==1.2.2
-filelock==3.16.1
-frozenlist==1.5.0
-fsspec==2024.9.0
-h11==0.14.0
-httpcore==1.0.7
-httpx==0.28.1
-huggingface-hub==0.27.1
-idna==3.10
-Jinja2==3.1.5
-jiter==0.8.2
-joblib==1.4.2
-llvmlite==0.43.0
-MarkupSafe==3.0.2
-more-itertools==10.6.0
-mpmath==1.3.0
-multidict==6.1.0
-multiprocess==0.70.16
-networkx==3.4.2
-numba==0.60.0
-numpy==2.0.2
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
-openai-whisper @ git+https://github.com/openai/whisper.git@517a43ecd132a2089d85f4ebc044728a71d49f6e
-packaging==24.2
-pandas==2.2.3
-pillow==11.1.0
-propcache==0.2.1
-pyarrow==19.0.0
-pycparser==2.22
-pydantic==2.10.5
-pydantic_core==2.27.2
-python-dateutil==2.9.0.post0
-pytz==2024.2
-pyxel==2.2.11
-PyYAML==6.0.2
-regex==2024.11.6
-requests==2.32.3
-safetensors==0.5.2
-scikit-learn==1.6.1
-scipy==1.15.1
-semantic-version==2.10.0
-sentence-transformers==3.3.1
-setuptools-rust==1.10.2
-six==1.17.0
-sniffio==1.3.1
+Flask==3.1.0
+numpy==1.25.0
+openai_whisper==20240930
+pyxel==2.3.0
+scikit_learn==1.4.0
+sentence_transformers==3.3.1
 sounddevice==0.5.1
-sympy==1.13.1
-threadpoolctl==3.5.0
-tiktoken==0.8.0
-tokenizers==0.21.0
-torch==2.5.1
-tqdm==4.67.1
 transformers==4.48.0
-triton==3.1.0
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.3.0
-xxhash==3.5.0
-yarl==1.18.3
-
-#追記
-Flask==2.0.1
-gunicorn==20.1.0
+whisper==1.1.10
