--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ mpmath==1.3.0
 networkx==3.4.2
 numba==0.60.0
 numpy==2.0.2
-openai-whisper==20240930
+# openai-whisper==20240930
 packaging==24.2
 pillow==11.1.0
 pycparser==2.22
