--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ sympy==1.13.3
 threadpoolctl==3.5.0
 tiktoken==0.8.0
 tokenizers==0.21.0
-torch==2.2.2
+torch==2.2.2+cpu
 tqdm==4.67.1
 transformers==4.48.0
 typing_extensions==4.12.2
