--- a/requirements.txt
+++ b/requirements.txt
@@ -35,10 +35,17 @@ sympy==1.13.3
 threadpoolctl==3.5.0
 tiktoken==0.8.0
 tokenizers==0.21.0
-# torch==2.2.2+cpu
 tqdm==4.67.1
 transformers==4.48.0
 typing_extensions==4.12.2
 urllib3==2.3.0
 Werkzeug==3.1.3
 whisper==1.1.10
+
+#wheelのリンク
+--extra-index-url https://download.pytorch.org/whl/cpu
+...
+torch==2.3.0+cpu
+torchaudio==2.3.0+cpu
+torchvision=0.18.1+cpu
+
