--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ mpmath==1.3.0
 networkx==3.4.2
 numba==0.60.0
 numpy==2.0.2
-# openai-whisper==20240930
+openai-whisper==20240930
 packaging==24.2
 pillow==11.1.0
 pycparser==2.22
@@ -28,7 +28,7 @@ requests==2.32.3
 safetensors==0.5.2
 scikit-learn==1.6.1
 scipy==1.15.1
-sentence-transformers==3.3.1
+# sentence-transformers==3.3.1
 six==1.17.0
 sounddevice==0.5.1
 sympy==1.13.3
@@ -36,16 +36,14 @@ threadpoolctl==3.5.0
 tiktoken==0.8.0
 tokenizers==0.21.0
 tqdm==4.67.1
-transformers==4.48.0
+# transformers==4.48.0
 typing_extensions==4.12.2
 urllib3==2.3.0
 Werkzeug==3.1.3
 whisper==1.1.10
 
-#wheelのリンク
 --extra-index-url https://download.pytorch.org/whl/cpu
-...
-torch==2.3.0+cpu
-torchaudio==2.3.0+cpu
-torchvision=0.18.1+cpu
+torch==2.1.2+cpu  # バージョンは適宜最新のものに
+transformers
+sentence-transformers
 
