--- a/requirements.txt
+++ b/requirements.txt
@@ -26,17 +26,15 @@ PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
 safetensors==0.5.2
-scikit-learn==1.6.1
+# scikit-learn==1.6.1
 scipy==1.15.1
-# sentence-transformers==3.3.1
 six==1.17.0
-sounddevice==0.5.1
+# sounddevice==0.5.1
 sympy==1.13.3
 threadpoolctl==3.5.0
 tiktoken==0.8.0
 tokenizers==0.21.0
 tqdm==4.67.1
-# transformers==4.48.0
 typing_extensions==4.12.2
 urllib3==2.3.0
 Werkzeug==3.1.3
