--- a/requirements.txt
+++ b/requirements.txt
@@ -11,14 +11,13 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
 joblib==1.4.2
-llvmlite==0.43.0
+# llvmlite==0.43.0
 MarkupSafe==3.0.2
 more-itertools==10.6.0
-mpmath==1.3.0
+# mpmath==1.3.0
 networkx==3.4.2
-numba==0.60.0
+# numba==0.60.0
 numpy==2.0.2
-openai-whisper==20240930
 packaging==24.2
 pillow==11.1.0
 pycparser==2.22
@@ -40,4 +39,4 @@ whisper==1.1.10
 torch==2.1.2+cpu  # バージョンは適宜最新のものに
 transformers
 sentence-transformers
-
+openai-whisper==20240930
