--- a/requirements.txt
+++ b/requirements.txt
@@ -34,9 +34,9 @@ typing_extensions==4.12.2
 urllib3==2.3.0
 Werkzeug==3.1.3
 whisper==1.1.10
+difflib
 
 --extra-index-url https://download.pytorch.org/whl/cpu
 torch==2.1.2+cpu  # バージョンは適宜最新のものに
 # transformers
-sentence-transformers
 openai-whisper==20240930
